--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "apexchart":"node_modules/apexcharts/dist/apexcharts.min.js"
   },
   "private": true,
   "dependencies": {
@@ -18,7 +19,9 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "apexcharts": "^3.40.0",
     "ng": "^0.0.0",
+    "ng-apexcharts": "^1.7.6",
     "node": "^20.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
