--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "apexchart":"node_modules/apexcharts/dist/apexcharts.min.js"
+    "apexchart": "node_modules/apexcharts/dist/apexcharts.min.js"
   },
   "private": true,
   "dependencies": {
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
     "apexcharts": "^3.40.0",
+    "bootstrap": "^5.3.0-alpha3",
     "ng": "^0.0.0",
     "ng-apexcharts": "^1.7.6",
     "node": "^20.2.0",
